<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Redu</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_category_notifications_key">notifications</string>
    <string name="pref_category_notifications_title">Notificações</string>
    <string name="pref_category_environment_key">environment</string>
    <string name="pref_category_environment_title">Ambientes</string>
    <string name="activate_notifications_key">activate_notifications</string>
    <string name="activate_notifications_title">Notificações</string>
    <string name="activate_notifications_summary">Ative/desative as notificações</string>
    <string name="when_answer_me_key">when_answer_me</string>
    <string name="when_answer_me_title">Quando me respondem</string>
    <string name="when_answer_me_summary">Em Comentários e Pedidos de Ajuda</string>
    <string name="new_courses_key">new_courses</string>
    <string name="new_courses_title">Novos Cursos</string>
    <string name="new_courses_summary">Novos Cursos nos Ambientes que participo</string>
    <!-- <string name="new_spaces_key">new_spaces</string> -->
    <!-- <string name="new_spaces_title">Novas Disciplinas</string> -->
    <!-- <string name="new_spaces_summary">Novos Disciplinas nos Cursos que participo</string> -->
    <string name="new_subject_key">new_subjects</string>
    <string name="new_subject_title">Novos Módulos</string>
    <string name="new_subject_summary">Novos Módulos nas Diciplinas que participo</string>
    <string name="new_lectures_key">new_lectures</string>
    <string name="new_lectures_title">Novas Aulas</string>
    <string name="new_lectures_summary">Novas Aulas nas Disciplinas que participo</string>

    <!-- ACTION BAR -->
    <string name="action_bar_up">Up</string>

    <!-- BUTTONS -->
    <string name="button_remove">Remover</string>
	<string name="button_access_class">Acessar Aula</string>
	<string name="button_wall">Mural</string>
	<string name="button_end_class">Finalizar Aula</string>
	<string name="button_cancel">Cancelar</string>
	<string name="button_add">Adicionar</string>
	<string name="button_new_module">Novo Módulo</string>
	<string name="button_ask_help">Pedir Ajuda</string>
	<string name="button_comment">Comentar</string>
	<string name="button_register">Cadastrar-se</string>
	
    <!-- TEXT VIEW -->
    <string name="tv_document_app_device_message">Utilizaremos um aplicativo do seu dispositivo para a visualização desta Aula</string>
    <string name="tv_user_action_someone_asekd_help">Alguém pediu ajuda</string>
    <string name="tv_image_name_class_2">Aula 2 (Vídeo)</string>
    <string name="tv_title">Título</string>
    <string name="tv_modularised_java">Java Modularizado</string>
    <string name="tv_this_environment_empty_no_courses">Este Ambiente está vazio, não há Cursos</string>
    <string name="tv_this_discipline_empty_no_modules">Esta Disciplina está vazia, será necessário adicionar o um Novo Módulo antes.</string>
    <string name="tv_new_status">Novos Status</string>
    <string name="tv_index">Índice</string>
    <string name="tv_empty_folder">Esta pasta está vazia.</string>
    <string name="tv_what_you_want_add">O que você deseja adicionar?</string>
    <string name="tv_login_or_email">Login ou email</string>
    <string name="tv_login_or_email_already_registered">Seu login ou email já está cadastrado</string>
    <string name="tv_password">Senha</string>
    <string name="tv_show_password">Mostrar Senha</string>
    <string name="tv_forgot_password">Esqueceu?</string>
    <string name="tv_recover_password_message">Ao requisitar a recuperação de senha, a sua antiga deixará de existir e uma nova será gerada.</string>
    <string name="tv_email_registered">Email cadastrado</string>
    <string name="tv_type_email_registered_on_redu">Digite o email registrado no Redu</string>
    <string name="tv_back">Voltar</string>
    <string name="tv_request_new_password">Requisitar nova senha</string>
    <string name="tv_connection_trouble">Problemas com a Conexão</string>
    <string name="tv_support_file">Arquivo de Apoio</string>
	<string name="tv_loading_answers">Carregando respostas</string>
	<string name="tv_no_answers_be_the_first">Não há respostas, seja o primeiro a responder</string>    
    
    <!-- HINT -->
    <string name="hint_your_password">Sua senha</string>
    <string name="hint_type_name_class">Digite aqui o nome da aula</string>
    <string name="hint_type_name_module">Digite aqui o nome do módulo</string>
    <string name="hint_type_description">Digite aqui a descrição</string>
    <string name="hint_type_your_answer">Digite aqui a descrição</string>
    
    <!-- SAMPLES -->
    <string name="tv_two_days_ago">Há dois dias</string>
    <string name="sample_lorem_ipsum">Lorem ipsum dolor sit amet</string>
</resources>