<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="@string/pref_category_notifications_key"
        android:title="@string/pref_category_notifications_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/op_activate_notifications_key"
            android:summary="@string/activate_notifications_summary"
            android:title="@string/activate_notifications_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_category_environment_key"
        android:title="@string/pref_category_environment_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/op_when_answer_me_key"
            android:summary="@string/when_answer_me_summary"
            android:title="@string/when_answer_me_title" />
    </PreferenceCategory>

</PreferenceScreen>