<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout 
	    android:layout_width="match_parent"
		android:layout_height="0dip"
		android:layout_weight="1"	    
		android:orientation="vertical" 
    	android:background="@drawable/bg_login">
	    <LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="0dip"
		    android:layout_weight="1"
		    android:orientation="vertical" 
		    android:background="@drawable/bg_light_login">
		    <LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="0dip"
			    android:layout_weight="0.5"
			    android:orientation="vertical" >
		    	<ImageView 
		    	    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center"
				    android:src="@drawable/redu_logo"
				    android:layout_margin="10dp"/>
			</LinearLayout>
			<View
		        android:layout_width="match_parent"
		        android:layout_height="1dip"
		        android:background="@color/gray_light" />
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="0dip"
			    android:layout_weight="0.5"
			    android:orientation="vertical"
			    android:background="#CFFF" 
			    android:padding="15dp">
		    	
			    <TextView 
			        android:layout_width="match_parent"
		      		android:layout_height="wrap_content"
		      		android:text="@string/tv_login_or_email"
		      		android:textSize="12sp"
		      		android:textColor="@color/gray_dark"
		      		android:layout_marginTop="25dp"/>
			    <EditText 
			        android:layout_width="match_parent"
		      		android:layout_height="wrap_content"
		      		android:text="@string/tv_login_or_email_already_registered"
		      		android:textSize="12sp"
		      		android:textColor="@color/gray_dark"/>
			    <TextView 
			        android:layout_width="match_parent"
		      		android:layout_height="wrap_content"
		      		android:text="@string/tv_password"
		      		android:layout_marginTop="15dp"
		      		android:textColor="@color/gray_dark"
		      		android:textSize="12sp"/>
			    <EditText 
			        android:layout_width="match_parent"
		      		android:layout_height="wrap_content"
		      		android:text="@string/hint_your_password"
		      		android:textSize="12sp"
		      		android:textColor="@color/gray_dark"/>
		    	<FrameLayout 
		    	    android:layout_width="match_parent"
		      		android:layout_height="wrap_content"
		      		android:layout_marginTop="20dp">
	
		    	    <CheckedTextView
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_gravity="left"
		    	        android:textSize="12sp"
		    	        android:text="@string/tv_show_password"
		    	        android:textColor="@color/gray_dark" />
	
		    	    <TextView 
		    	        android:layout_width="wrap_content"
			      		android:layout_height="wrap_content"
			      		android:layout_gravity="right"
			      		android:textColor="@color/blue"
			      		android:textSize="12sp"
			      		android:clickable="true"
			      		android:background="@null"
			      		android:text="@string/tv_forgot_password"/>
		    	</FrameLayout>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
		
		    <Button
		        android:id="@+id/btRegister"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:textColor="@color/blue"
		        android:text="@string/button_register"
		        android:background="@drawable/bt_bottom_gray" />
		
		    <Button
		        android:id="@+id/btEnter"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:textColor="#fff"
		        android:text="@string/button_register"
		        android:background="@drawable/bt_bottom_green" />
		</LinearLayout>
</LinearLayout>