<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#C000">

	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_margin="15dp"
	    android:background="#fff"
	    android:gravity="center"
	    android:orientation="vertical" >

		<FrameLayout 
		    android:layout_height="wrap_content"
		    android:layout_width="match_parent"
		    >
		    
		    <android.widget.Button
		        android:id="@+id/btCancelarPreview"
		        android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:layout_gravity="left"
	    	    android:text="@string/button_cancel"
	    	    android:textColor="@color/blue"
	    	    android:background="@drawable/bg_gray"
	    	    android:layout_margin="7dp" />
		    <android.widget.Button
		        android:id="@+id/btAdicionarPreview" 
		   		android:layout_width="wrap_content"
		   		android:layout_gravity="right"
		   	    android:layout_height="wrap_content"
		   	    android:text="@string/button_add"
		   	    android:textColor="@color/blue"
		   	    android:background="@drawable/bg_gray"
		   	    android:layout_margin="7dp"/>
		 </FrameLayout>
	
	    <View
	        android:layout_width="wrap_content"
	        android:layout_height="1dp"
	        android:background="@drawable/img_divider" />
	    
	    <LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:background="#F0F0F0">
		    	
		    	<ImageView
		    	    android:id="@+id/camera_preview"
		    	    android:layout_width="128dp"
		    	    android:layout_height="128dp"
		    	    android:layout_margin="7dp"
		    	    android:layout_gravity="center" />
		    	
		    	<TextView
				    android:id="@+id/tvImageName"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:padding="10dp"
				    android:gravity="center"
				    android:text="@string/tv_image_name_class_2"
				    android:textAppearance="?android:attr/textAppearanceLarge"
				    android:textColor="#999"
				    android:textSize="10sp" />
		    	
	    </LinearLayout>
	    
	    <View
	        android:layout_width="wrap_content"
	        android:layout_height="1dp"
	        android:background="@drawable/img_divider" />
	    
	    <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_gravity="left"
		    android:padding="5dp">
		    <TextView
				    android:id="@+id/tvTitle"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:padding="5dp"
				    android:layout_gravity="left"
				    android:text="@string/tv_title"
				    android:textAppearance="?android:attr/textAppearanceLarge"
				    android:textColor="#999"
				    android:textSize="12sp" />
		    	
	        <EditText  
			    android:id="@+id/etTitleLecture"  
			    android:layout_height="wrap_content"
			    android:hint="@string/hint_type_name_class"  
			    android:inputType="text"  
			    android:textSize="12sp"
			    android:layout_weight="1"
			    android:layout_width="0dip"/>  

	    </LinearLayout>
	    <View
                android:layout_height="2dp"
                android:layout_width="fill_parent"
                android:background="@drawable/img_divider" />
	    
	    <LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:padding="5dp">
	    
	    	<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:padding="7dp"
			    android:layout_weight="1"
			    android:layout_margin="7dp"
			    android:text="Para onde vai esta aula?"
			    android:textAppearance="?android:attr/textAppearanceLarge"
			    android:textColor="#999"
			    android:textSize="18sp" />
	    	<TextView
	    	    android:id="@+id/tvWhereLecture"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:padding="7dp"
			    android:layout_weight="1"
			    android:layout_margin="7dp"
			    android:text="... > Curso Praesent Voluptat  > Disciplina Vestibulum Commodo > Módulo Sit Amet"
			    android:textAppearance="?android:attr/textAppearanceLarge"
			    android:textColor="#6D6E6F"
			    android:textSize="12sp" />
	    	
    	</LinearLayout>
	</LinearLayout>
</FrameLayout>